syntax = "proto3";
package sgc7pb;
option go_package = "github.com/zhs007/slotsgamecore7/sgc7pb";

// RequestRngs - request some rngs
message RequestRngs {
    int32 nums = 1;
    string gamecode = 2;
}

// ReplyRngs - reply rngs
message ReplyRngs {
    repeated uint32 rngs = 1;
}

// Rng - RNG Service
service Rng {
	// getRngs - get rngs
    rpc getRngs(RequestRngs) returns (ReplyRngs) {}
}